[metadata]
name = deploy_manager

summary = OpenStack Deploy Server
author = Tony Cheng @ 104 Corp.
author-email = tony.cheng@104.com.tw
home-page = http://www.104.com.tw

[files]
packages =
   deploy_manager
   ip_manager_v1
   hostname_manager_v1
   upgrade_manager_v1

data_files =
   /etc/deploy_manager = etc/deploy_manager/deploy_manager.ini
   /etc/deploy_manager/backends = etc/deploy_manager/backends/*

[entry_points]
console_scripts = 
   deploy_manager = deploy_manager.app.server:launch

ip_manager.drivers =
   ipv4 = ip_manager_v1.driver:Driver
   hostname_manager.drivers = hostname = hostname_manager_v1.driver:Driver
   upgrade_manager.drivers = apt_package = upgrade_manager_v1.driver:Driver

[pbr]
#autodoc_index_modules = True
#autodoc_exclude_modules =
#  monasca_api.api.wsgi*
#  monasca_api.conf.*
#  monasca_api.tests.*
#  monasca_tempest_tests.*
#api_doc_dir = contributor/api
